# Slimmer

./: README.md  data.py  download_data.py  iou.py  no_use.py  prepare_data.py  split_data.py  unet.py
AddLabel/: add_label_nearest.py  iou_after_label.py  iou_after_label_each.py  nearestLabel.py  plotMIssingLabel.py  recover_full.py  simplification_ratio_each.py  simplification_ratio_each_val.py  test.py
C_Sparse/: layer_test.py
Cpp/add_label/: CMakeLists.txt
Cpp/add_label/src/: main.cpp
Cpp/random_simplify/: CMakeLists.txt
Cpp/recover_full/: CMakeLists.txt
Cpp/recover_full/include/: DtcMainHelper.hpp
Cpp/recover_full/src/: DtcMainHelper.cpp  main.cpp
Cpp/sample_data/: CMakeLists.txt
Cpp/sample_data/include/: grid.hpp  hierarchy.hpp  my_utility.hpp  random.hpp
Cpp/sample_data/src/: grid.cpp  hierarchy.cpp  main.cpp  my_utility.cpp  random.cpp
DataProcessing/: copy_val_pth.py  data_to_bin.py  download_data.py  move_val_pth.py  point_cloud_viewer.py  pth_to_bin.py  pth_to_ply.py  pth_to_ply_dir.py  pth_to_ply_for_train.py  split_data.py
Matlab/: addLabel_nearest.m  empty_cell.m  fps_first.m  grid_improve_accuracy.m  grid_max_vs_original.m  iou_plot.m  memory_first.m  memory_plot.m  processing_time.m  processing_time_plot.m  random_grid_hierarchy_compare.m  random_improve_accuracy.m  random_result.m  speed_first.m  test.m
Matlab/iou_knn/: iou_knn_compare.m  (+3 more)
Model/: .gitignore  scannet_m8_rep1_residualFalse-000000470.pth
Pipeline/: random_whole.py
PointFeature/: empty_cell.py  kitti_empty_cell.py  max_point_cloud.py  scannet_empty_cell.py
Sampling/: crop_data.py  curvature_crop_data.py  gaussian_crop_data.py  grid_crop_data.py  grid_processing_time.py  hierarchy_crop_data.py  random_crop_data.py  random_crop_data_py.py  random_processing_time.py
Validation/: main_valid.py  memory_valid.py  pc_viewer.py  result_pc_viewer.py  results_viewer.py  system_overview.py  valid_memory.py  valid_one_point_cloud.py  valid_view_point_cloud.py  valid_view_point_cloud_in_txt.py  view_infer_nearest.py  view_raw_point_cloud.py  view_raw_point_cloud_in_ply.py  view_raw_point_cloud_in_pth.py
(+863 files in other folders)
